runners/places: Fix crash when instantiating places model

This class being moved to a new thread causes issues, because a job is
not being moved to the same thread and is deleted when trying to access
it.

BUG: 472157